# chip8-emu

./: .gitignore  Cargo.toml  LICENSE  README.md  chip8.js  index.html  style.css
pkg/: chip8_emu.d.ts  chip8_emu.js  chip8_emu_bg.wasm  chip8_emu_bg.wasm.d.ts  package.json
src/: lib.rs  log  main.rs  wasm.rs
src/mods/: chip8.rs
